# deposit-rate-scraper

./: .gitignore  LICENSE  README.md  banks_urls.txt  pyproject.toml  requirements.txt
src/: main.py
src/deposits/: cli.py  export.py  http.py  models.py  parsers.py  utils.py
